# Copyright 2025 The ZKIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_cuda//cuda:defs.bzl", "requires_cuda")
load("//benchmark:benchmark.bzl", "zkir_benchmark", "zkir_mlir_cc_import")

zkir_mlir_cc_import(
    name = "msm_cpu_ciface",
    mlir_src = "msm_cpu.mlir",
    zkir_opt_flags = [
        "-elliptic-curve-to-field",
        "-field-to-llvm=enable-openmp=true",
    ],
)

zkir_mlir_cc_import(
    name = "msm_gpu_ciface",
    mlir_src = "msm_gpu.mlir",
    target_compatible_with = requires_cuda(),
    zkir_opt_flags = [
        "-elliptic-curve-to-field",
        "-field-to-gpu=parallelize-affine=true",
    ],
)

zkir_benchmark(
    name = "msm_benchmark_test",
    srcs = ["msm_benchmark.cc"],
    target_compatible_with = requires_cuda(),
    deps = [
        ":msm_cpu_ciface",
        ":msm_gpu_ciface",
        "//utils/cuda:CudaUtils",
        "@cuda//:cuda_headers",
        "@cuda//:cuda_runtime",
        "@llvm-project//mlir:ExecutionEngine",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:mlir_cuda_runtime",
        "@local_config_omp//:omp",
        "@zk_dtypes//zk_dtypes:bn254_fr",
        "@zk_dtypes//zk_dtypes:bn254_g1",
    ],
)
