# Copyright 2025 The ZKIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@bazel_skylib//rules:common_settings.bzl", "string_flag")
load("@rules_cuda//cuda:defs.bzl", "requires_cuda")
load("//benchmark:benchmark.bzl", "vecops_extra_replacements", "zkir_benchmark", "zkir_mlir_cc_import", "zkir_mlir_template_parameterized")

string_flag(
    name = "vecops_log_size",
    build_setting_default = "16",
    values = ["12", "14", "16", "18", "20", "22"],
)

zkir_mlir_template_parameterized(
    name = "vecops_cpu_mlir",
    default_log_size = 16,
    extra_replacements_fn = vecops_extra_replacements,
    log_sizes = [12, 14, 16, 18, 20, 22],
    size_flag = ":vecops_log_size",
    template_src = "vecops_cpu.mlir.template",
)

zkir_mlir_template_parameterized(
    name = "vecops_gpu_mlir",
    default_log_size = 16,
    extra_replacements_fn = vecops_extra_replacements,
    log_sizes = [12, 14, 16, 18, 20, 22],
    size_flag = ":vecops_log_size",
    template_src = "vecops_gpu.mlir.template",
)

zkir_mlir_cc_import(
    name = "vecops_cpu_ciface",
    mlir_src = ":vecops_cpu_mlir",
    zkir_opt_flags = [
        "-field-to-llvm=enable-openmp=true",
    ],
)

zkir_mlir_cc_import(
    name = "vecops_gpu_ciface",
    mlir_src = ":vecops_gpu_mlir",
    target_compatible_with = requires_cuda(),
    zkir_opt_flags = [
        # FIXME(batzor): Converting affine loops to GPU directly is causing
        # fully parallel reduction, resulting in wrong values. By enabling
        # `parallelize-affine`, the affine is first lowered to SCF and then to
        # GPU so only the outer loop is parallelized and mapped to gridX.
        # Tiling should improve the performance but we have to decide how to
        # make tiling more automated.
        "-field-to-gpu=parallelize-affine=true",
    ],
)

zkir_benchmark(
    name = "vecops_benchmark_test",
    srcs = ["vecops_benchmark.cc"],
    target_compatible_with = requires_cuda(),
    deps = [
        ":vecops_cpu_ciface",
        ":vecops_gpu_ciface",
        "//utils/cuda:CudaUtils",
        "@cuda//:cuda_headers",
        "@cuda//:cuda_runtime",
        "@llvm-project//mlir:ExecutionEngine",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:mlir_cuda_runtime",
        "@local_config_omp//:omp",
        "@zk_dtypes//zk_dtypes:goldilocks",
    ],
)
