# Copyright 2025 The PrimeIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_python//python:defs.bzl", "py_library")
load("//prime_ir:pywrap.bzl", "nanobind_pywrap_extension")
load("//prime_ir:symlink_files.bzl", "symlink_inputs")

package(
    default_visibility = ["//visibility:public"],
)

nanobind_pywrap_extension(
    name = "_mlir",
    srcs = ["@llvm-project//mlir:lib/Bindings/Python/MainModule.cpp"],
    deps = [
        # TODO(chokobole): Remove this after we have `_elliptic_curve` target.
        "//prime_ir/Dialect/EllipticCurve/IR:EllipticCurve",
        "@llvm-project//mlir:MLIRBindingsPythonCore",
        "@llvm-project//mlir:MLIRBindingsPythonNanobindHeaders",
        "@nanobind",
    ] + select({
        "@platforms//os:macos": ["@rules_python//python/cc:current_py_cc_libs"],
        "//conditions:default": [],
    }),
)

symlink_inputs(
    name = "_mlir_libs",
    rule = py_library,
    symlinked_inputs = {"srcs": {
        ".": ["@llvm-project//mlir/python:MlirLibsPyFiles"],
    }},
    deps = [":_mlir"],
)

########################################################
# Field
########################################################

nanobind_pywrap_extension(
    name = "_field",
    srcs = ["//prime_ir/Dialect/Field/Python:FieldPyApiFiles"],
    deps = [
        "//prime_ir/Dialect/Field/C:CAPI",
        "//prime_ir/Dialect/Field/Python:FieldAttributesAndTypes",
        "@llvm-project//mlir:CAPIIR",
        "@llvm-project//mlir:MLIRBindingsPythonNanobindHeaders",
        "@nanobind",
    ] + select({
        "@platforms//os:macos": ["@rules_python//python/cc:current_py_cc_libs"],
        "//conditions:default": [],
    }),
)
