load("@rules_cuda//cuda:defs.bzl", "requires_cuda")
load("//bazel:lit.bzl", "glob_lit_tests", "run_lit_tests")

package(
    licenses = ["notice"],
)

GPU_TESTS = [
    "bucket_acc_runner.mlir",
    "bucket_reduce_runner.mlir",
    "scalar_decomp_runner.mlir",
    "window_reduce_runner.mlir",
]

glob_lit_tests(
    name = "all_tests",
    data = ["//tests:test_utilities"],
    driver = "//tests:run_lit.sh",
    exclude = GPU_TESTS,
    test_file_exts = ["mlir"],
    timeout_override = {
        "elliptic_curve_msm_runner.mlir": "moderate",
        "elliptic_curve_to_field_runner.mlir": "moderate",
    },
)

# GPU tests that require CUDA runtime
run_lit_tests(
    data = [
        "//tests:test_utilities",
        "//tests:test_utilities_cuda",
    ],
    target_compatible_with = requires_cuda(),
    tests = GPU_TESTS,
    timeout_override = {
        "bucket_reduce_runner.mlir": "moderate",
    },
)
