# Copyright 2025 The PrimeIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_cuda//cuda:defs.bzl", "requires_cuda")
load("//bazel:lit.bzl", "glob_lit_tests", "run_lit_tests")

GPU_TESTS = [
    "bucket_acc_runner.mlir",
    "bucket_reduce_runner.mlir",
    "scalar_decomp_runner.mlir",
    "window_reduce_runner.mlir",
]

glob_lit_tests(
    name = "all_tests",
    data = ["//tests:test_utilities"],
    driver = "//tests:run_lit.sh",
    exclude = GPU_TESTS,
    test_file_exts = ["mlir"],
    timeout_override = {
        "elliptic_curve_msm_runner.mlir": "moderate",
        "elliptic_curve_to_field_runner.mlir": "moderate",
    },
)

# GPU tests that require CUDA runtime
run_lit_tests(
    data = [
        "//tests:test_utilities",
        "//tests:test_utilities_cuda",
    ],
    target_compatible_with = requires_cuda(),
    tests = GPU_TESTS,
    timeout_override = {
        "bucket_reduce_runner.mlir": "moderate",
    },
)
