# Copyright 2025 The PrimeIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("//bazel:lit.bzl", "glob_lit_tests")
load("//bazel:prime_ir_cc.bzl", "prime_ir_cc_test")

glob_lit_tests(
    name = "all_tests",
    data = ["//tests:test_utilities"],
    driver = "//tests:run_lit.sh",
    test_file_exts = ["mlir"],
    timeout_override = {
        "elliptic_curve_msm_runner.mlir": "moderate",
        "elliptic_curve_to_field_runner.mlir": "moderate",
        "pairing_check_runner.mlir": "long",
        "pairing_check_4pairs_runner.mlir": "long",
    },
)

prime_ir_cc_test(
    name = "ECRoundTripTest",
    srcs = ["ECRoundTripTest.cpp"],
    deps = [
        "//prime_ir/Dialect/EllipticCurve/IR:EllipticCurve",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Parser",
        "@zk_dtypes//zk_dtypes:bn254_g1",
        "@zk_dtypes//zk_dtypes:bn254_g2",
    ],
)

prime_ir_cc_test(
    name = "PointOperationTest",
    srcs = ["PointOperationTest.cpp"],
    deps = [
        "//prime_ir/Dialect/EllipticCurve/IR:EllipticCurve",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@zk_dtypes//zk_dtypes:bn254_g1",
        "@zk_dtypes//zk_dtypes:bn254_g2",
        "@zk_dtypes//zk_dtypes:ed25519_g1",
    ],
)

prime_ir_cc_test(
    name = "CreateZeroPointTest",
    srcs = ["CreateZeroPointTest.cpp"],
    deps = [
        "//prime_ir/Dialect/EllipticCurve/IR:EllipticCurve",
        "//prime_ir/Dialect/Field/IR:Field",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Support",
        "@zk_dtypes//zk_dtypes:bn254_g1",
    ],
)
