# Copyright 2025 The PrimeIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_cc//cc:defs.bzl", "cc_test")
load("//bazel:lit.bzl", "glob_lit_tests")

glob_lit_tests(
    name = "all_tests",
    data = ["//tests:test_utilities"],
    driver = "//tests:run_lit.sh",
    test_file_exts = ["mlir"],
)

cc_test(
    name = "BinaryFieldOperationTest",
    srcs = ["BinaryFieldOperationTest.cpp"],
    deps = [
        "//prime_ir/Dialect/Field/IR:Field",
        "//prime_ir/Utils:ZkDtypes",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@zk_dtypes//zk_dtypes:binary_field",
    ],
)

cc_test(
    name = "PrimeFieldOperationTest",
    srcs = ["PrimeFieldOperationTest.cpp"],
    deps = [
        "//prime_ir/Dialect/Field/IR:Field",
        "//prime_ir/Utils:ZkDtypes",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:IR",
        "@zk_dtypes//zk_dtypes:babybear",
        "@zk_dtypes//zk_dtypes:bn254_fr",
        "@zk_dtypes//zk_dtypes:goldilocks",
    ],
)

cc_test(
    name = "ExtensionFieldOperationTest",
    srcs = ["ExtensionFieldOperationTest.cpp"],
    deps = [
        "//prime_ir/Dialect/Field/IR:Field",
        "//prime_ir/Utils:ZkDtypes",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:IR",
        "@zk_dtypes//zk_dtypes:babybearx4",
        "@zk_dtypes//zk_dtypes:goldilocksx3",
        "@zk_dtypes//zk_dtypes:mersenne31x2",
        "@zk_dtypes//zk_dtypes:mersenne31x2x2",
    ],
)

cc_test(
    name = "BitcastOpTest",
    srcs = ["BitcastOpTest.cpp"],
    deps = [
        "//prime_ir/Dialect/Field/IR:Field",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@llvm-project//mlir:IR",
    ],
)
