# Copyright 2025 The ZKIR Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@rules_cc//cc:defs.bzl", "cc_test")
load("//bazel:lit.bzl", "glob_lit_tests")

glob_lit_tests(
    name = "all_tests",
    data = ["//tests:test_utilities"],
    driver = "//tests:run_lit.sh",
    test_file_exts = ["mlir"],
)

cc_test(
    name = "ModArithOperationTest",
    srcs = ["ModArithOperationTest.cpp"],
    deps = [
        "//zkir/Dialect/ModArith/IR:ModArith",
        "//zkir/Utils:ZkDtypes",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:IR",
        "@zk_dtypes//zk_dtypes:babybear",
        "@zk_dtypes//zk_dtypes:goldilocks",
    ],
)
