# Copyright 2025 The ZKX Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("//bazel:zkx_cc.bzl", "zkx_cc_library", "zkx_cc_unittest")

package(default_visibility = ["//visibility:public"])

zkx_cc_library(
    name = "allocator",
    srcs = ["allocator.cc"],
    hdrs = ["allocator.h"],
    deps = [
        "//xla/tsl/platform:numa",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:optional",
    ],
)

zkx_cc_library(
    name = "allocator_retry",
    srcs = ["allocator_retry.cc"],
    hdrs = ["allocator_retry.h"],
    deps = [
        ":metrics",
        "//xla/tsl/platform:env",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
    ],
)

zkx_cc_library(
    name = "bfc_allocator",
    srcs = ["bfc_allocator.cc"],
    hdrs = ["bfc_allocator.h"],
    deps = [
        ":allocator",
        ":allocator_retry",
        ":shared_counter",
        "//xla/tsl/lib/core:bits",
        "//xla/tsl/platform:env",
        "//xla/tsl/platform:numbers",
        "//xla/tsl/profiler/lib:scoped_memory_debug_annotation",
        "//xla/tsl/profiler/lib:traceme",
        "//xla/tsl/profiler/utils:trace_filter_utils",
        "//xla/tsl/protobuf:bfc_memory_map_cc_proto",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "cancellation",
    srcs = ["cancellation.cc"],
    hdrs = ["cancellation.h"],
    deps = [
        "//xla/tsl/lib/gtl:flatmap",
        "//xla/tsl/platform:status",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/synchronization",
    ],
)

zkx_cc_library(
    name = "device_id",
    hdrs = ["device_id.h"],
    deps = ["//xla/tsl/lib/gtl:int_type"],
)

zkx_cc_library(
    name = "metrics",
    srcs = ["metrics.cc"],
    hdrs = ["metrics.h"],
    deps = ["//xla/tsl/lib/monitoring:counter"],
)

zkx_cc_library(
    name = "shared_counter",
    hdrs = ["shared_counter.h"],
)

zkx_cc_unittest(
    name = "framework_unittests",
    srcs = ["cancellation_unittest.cc"],
    deps = [
        ":cancellation",
        "//xla/tsl/platform:env",
    ],
)
